# weirdpassreqcomplgen

./: .gitignore  CMakeLists.txt  log2.c  logarithms.c  logarithms.h  randomgenerator.c  randomgenerator.h
tests/: CMakeLists.txt  assertions.h  test_log2.c  test_log2_note.txt
